--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-  
+<meta name="google-site-verification" content="bPeyJ_S-8nWUQOJ-jHeV7UVtUrtM_aln4fud6O-cZHc" />   
+<meta name="naver-site-verification" content="4de6a514113611af93464134f5afa5fe874bb55e" />  
   
   <title>딱 10분 투자! 당신의 자동차보험 운명이 바뀐다!</title>
 
@@ -601,3 +601,4 @@
 </div>
 </body>
 </html>
+
